; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/opl4/extr_opl4_synth.c_snd_opl4_terminate_note.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/drivers/opl4/extr_opl4_synth.c_snd_opl4_terminate_note.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_midi_channel = type { i32 }
%struct.snd_opl4 = type { i32 }

@snd_opl4_terminate_voice = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @snd_opl4_terminate_note(i8* %0, i32 %1, %struct.snd_midi_channel* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.snd_midi_channel*, align 8
  %7 = alloca %struct.snd_opl4*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.snd_midi_channel* %2, %struct.snd_midi_channel** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.snd_opl4*
  store %struct.snd_opl4* %9, %struct.snd_opl4** %7, align 8
  %10 = load %struct.snd_opl4*, %struct.snd_opl4** %7, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.snd_midi_channel*, %struct.snd_midi_channel** %6, align 8
  %13 = load i32, i32* @snd_opl4_terminate_voice, align 4
  %14 = call i32 @snd_opl4_do_for_note(%struct.snd_opl4* %10, i32 %11, %struct.snd_midi_channel* %12, i32 %13)
  ret void
}

declare dso_local i32 @snd_opl4_do_for_note(%struct.snd_opl4*, i32, %struct.snd_midi_channel*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
